--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "js-beautify": "^1.5.4",
     "lodash": "^3.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^1.6.0"
   }
 }
